--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,11 +5,19 @@ pipeline {
         jdk 'JDK11'
     }
     stages {
-        // stage('Git Checkout') {
-        //     steps {
-        //         git branch: 'main', credentialsId: 'dp-github-integrator', url: 'https://github.com/ab-inbev-global-martech/devops-sandbox.git'
-        //     }
-        // }
+        stage('Git Checkout') {
+            steps {
+                git branch: 'main', credentialsId: 'dp-github-integrator', url: 'https://github.com/ab-inbev-global-martech/devops-sandbox.git'
+            }
+            post {
+                success {
+                    echo 'git checkout executed successfully'
+                }
+                failure {
+                    echo 'git checkout execution failed'
+                }
+            }
+        }
         stage('Sonar analysis by webhook') {
             when {
                 branch 'main'
