--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=org.sonarqube:sonarqube-scanner
+sonar.projectKey=luiarhs_devops-sandbox
 sonar.projectName=PoC of SonarQube Scanner Usage
 sonar.projectVersion=1.0
 
