--- a/billing/pom.xml
+++ b/billing/pom.xml
@@ -24,6 +24,8 @@
         <maven.compiler.target>1.8</maven.compiler.target> 
         <spring-boot.version>2.3.4.RELEASE</spring-boot.version>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
+        <sonar.organization>luiarhs</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties> 
     
     <dependencyManagement>
