--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,8 @@
 sonar.projectKey=luiarhs_devops-sandbox
-sonar.projectName=PoC of SonarQube Scanner Usage
+sonar.projectName=sonnarcloud-poc
+sonar.projectName=PoC
 sonar.projectVersion=1.0
+sonar.language=java
 
 sonar.sources=billing/src/main/java
 sonar.java.binaries=billing/target/classes
