--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.projectName=PoC
 sonar.projectVersion=1.0
 sonar.language=java
 
-sonar.sources=billing/src/main/java
-sonar.java.binaries=billing/target/classes
+sonar.sources=src/main/java
+sonar.java.binaries=target/classes
 
 sonar.sourceEncoding=UTF-8
