--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,6 @@
+sonar.host.url=https://sonarcloud.io
 sonar.projectKey=luiarhs_devops-sandbox
+sonar.login=238477e4c0871c9e3f5f851e8e5c91d8f3f7bde0
 sonar.projectName=sonnarcloud-poc
 sonar.projectName=PoC
 sonar.projectVersion=1.0
